--- a/src/components/Subscription/Region.module.scss
+++ b/src/components/Subscription/Region.module.scss
@@ -43,7 +43,7 @@
     font-family: $sans-serif-font-family;
     font-size: 1.1rem;
     cursor: pointer;
-    height: 50px;
+    height: 3rem;
     text-decoration: none;
     box-sizing: border-box;
     border-radius: 3px;
